# Chess-Engine

./: CMakeLists.txt  CMakeLists.txt.bak  folder-strucutre.py  main.cpp
benchmarks/: perft.cpp  search_benchmark.cpp
data/: openings.epd  test_positions.fen
data/opening_database/: openings.json  script.py
docs/: architecture.md
include/chess/: bitboard.h  board.h  evaluate.h  fen.h  movegen.h  types.h  util.h  zobrist.h
include/engine/: evaluate.h  move_orderer.h  opening_book.h  options.h  search.h  time.h  transposition.h  uci.h
include/utils/: config.h  logger.h  threadpool.h
src/chess/: bitboard.cpp  board.cpp  calculate_pins.cpp  evaluate.cpp  fen.cpp  movegen.cpp  zobrist.cpp
src/chess/movegen/: diagonal_sliders.cpp  king.cpp  knight.cpp  orthogonal_sliders.cpp  pawn.cpp  pawn_fast.cpp  pawn_slow.cpp
src/engine/: evaluate.cpp  move_ordered_alternative.cpp  move_orderer.cpp  search.cpp  time.cpp  transposition.cpp  uci.cpp
src/engine/search/: capture-only.cpp  negamax.cpp
src/utils/: config.cpp  logger.cpp  threadpool.cpp
tests/: board_tests.cpp  evaluation_test.cpp  fen_test.cpp  movegen_tests.cpp  out.txt  output.txt  perft_multithreaded.cpp  perft_test.cpp  search_test.cpp  zobrist_test.cpp
tools/: engine_cli.cpp  fen_parser.cpp  perft_runner.cpp
